<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/black"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chart"
            android:id="@+id/textualInfo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleHead"
            android:text="@string/enterprise"
            android:textSize="60sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noOfItemsBought"
            android:text="@string/noofitemsbought"
            android:textSize="20sp"
            android:layout_below="@id/titleHead"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/totalMoneySpent"
            android:text="@string/totalmoneyspenthere"
            android:textSize="20sp"
            android:layout_below="@id/noOfItemsBought"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastPurchaseDate"
            android:text="@string/lastdateofpurchase"
            android:textSize="20sp"
            android:layout_below="@id/totalMoneySpent"/>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>