<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/name_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:textColor="@color/colorAccentForBilloo"
        android:textSize="30sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_signup_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_signup"
        android:layout_below="@id/name_signup">
        <EditText
            android:id="@+id/email_signup"
            android:text="rajanrlad71293@gmail.com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_signup_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_signup"
        android:layout_below="@id/email_signup_placeholder">
        <EditText
            android:id="@+id/password_signup"
            android:text="check@123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmpassword_signup_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmpassword_signup"
        android:layout_below="@id/password_signup_placeholder">
        <EditText
            android:id="@+id/confirmpassword_signup"
            android:text="check@123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
    </android.support.design.widget.TextInputLayout>



    <RelativeLayout
        android:id="@+id/checkboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/termsandconditions"
            android:text="@string/agreetermsandconditions_signup"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/signup_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_signup"
            android:background="@color/colorPrimaryDarkForBilloo"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:layout_below="@id/termsandconditions"
            />

    </RelativeLayout>
</RelativeLayout>