<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/billoologo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_login_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_login"
        android:layout_below="@id/logo_login">
        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
    </android.support.design.widget.TextInputLayout>

     <android.support.design.widget.TextInputLayout
        android:id="@+id/password_login_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_login"
        android:layout_below="@id/email_login_placeholder">
            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>
    </android.support.design.widget.TextInputLayout>




    <RelativeLayout
        android:id="@+id/checkboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:background="@color/colorPrimaryDarkForBilloo"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/signup_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_login"
            android:textColor="@color/colorPrimaryDarkForBilloo"/>

    </RelativeLayout>
</RelativeLayout>